# api/openapi-spec/v1_swagger.yaml
@@ -2,56 +2,20 @@ basePath: /api/v1
 definitions:
   models.Authentication:
     properties:
-      access_token:
+      accessToken:
         description: |-
           The access token to use for the API
           example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c
         type: string
-      expires_in:
+      expiresIn:
         description: |-
           The duration of the token (in seconds).
           example: 3600
         type: integer
-      message:
-        description: |-
-          The message to display to the user.
-          example: Successfully logged in.
-        type: string
-      token_type:
+      tokenType:
         description: |-
           The type of the token.
           example: Bearer
-        type: string
-    type: object
-  models.DiscordUser:
-    properties:
-      global_name:
-        description: |-
-          The user's name.
-          example: john.doe
-        type: string
-      id:
-        description: |-
-          The user's ID.
-          example: 1234567890
-        type: integer
-      username:
-        description: |-
-          The user's username.
-          example: John Doe
-        type: string
-    type: object
-  models.MinecraftPlayer:
-    properties:
-      id:
-        description: |-
-          The player's UUID.
-          example: 069a79f4-44e9-4726-a5be-fca90e38aaf5
-        type: string
-      name:
-        description: |-
-          The player's name.
-          example: Notch
         type: string
     type: object
   models.Party:
@@ -66,22 +30,56 @@ definitions:
           The ID of the party.
           It is a random string of 69 characters.
         type: string
+      leader:
+        allOf:
+        - $ref: '#/definitions/models.Player'
+        description: The leader of the party.
       players:
         description: The list of players in the party.
         items:
           $ref: '#/definitions/models.Player'
         type: array
+      settings:
+        allOf:
+        - $ref: '#/definitions/models.Settings'
+        description: The settings of the party.
     type: object
   models.Player:
     properties:
-      discord:
-        allOf:
-        - $ref: '#/definitions/models.DiscordUser'
-        description: The Discord user.
-      player:
-        allOf:
-        - $ref: '#/definitions/models.MinecraftPlayer'
-        description: The Minecraft player.
+      discordID:
+        description: |-
+          The player's Discord ID.
+          example: "385441179069579265"
+        type: string
+      name:
+        description: |-
+          The player's name.
+          example: Notch
+        type: string
+      uuid:
+        description: |-
+          The player's UUID.
+          example: 069a79f4-44e9-4726-a5be-fca90e38aaf5
+        type: string
+    type: object
+  models.Settings:
+    properties:
+      listed:
+        description: |-
+          Whether the party can be listed or not.
+          example: true
+        type: boolean
+      maxPlayers:
+        description: |-
+          The maximum number of players in the party.
+          example: 10
+        type: integer
+      public:
+        description: |-
+          Whether the party is public or not.
+          If false can only be joined by invite.
+          example: true
+        type: boolean
     type: object
 info:
   contact:
@@ -99,6 +97,12 @@ paths:
       consumes:
       - application/json
       description: Create a new party
+      parameters:
+      - description: Settings
+        in: body
+        name: Settings
+        schema:
+          $ref: '#/definitions/models.Settings'
       produces:
       - application/json
       responses:
@@ -116,15 +120,21 @@ paths:
       tags:
       - Party
   /party/join:
-    post:
+    put:
       consumes:
       - application/json
       description: Join a party
+      parameters:
+      - description: Party ID
+        in: query
+        name: ID
+        required: true
+        type: string
       produces:
       - application/json
       responses:
-        "201":
-          description: Created
+        "202":
+          description: Accepted
           schema:
             $ref: '#/definitions/models.Party'
       security:
@@ -140,20 +150,23 @@ paths:
         username and a Mojang session hash
       parameters:
       - description: Discord identify token
-        in: header
+        in: body
         name: token
         required: true
-        type: string
+        schema:
+          type: string
       - description: Minecraft username
-        in: header
+        in: body
         name: username
         required: true
-        type: string
+        schema:
+          type: string
       - description: Mojang session hash
-        in: header
+        in: body
         name: hash
         required: true
-        type: string
+        schema:
+          type: string
       produces:
       - application/json
       responses:
